--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "autoprefixer-stylus": "0.10.0",
     "concurrently": "3.0.0",
-    "react-scripts": "0.6.1",
-    "stylus": "0.54.5"
+    "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "gsap": "^1.19.0",
     "history": "4.2.0",
     "re-base": "2.2.0",
     "react": "15.3.2",
@@ -19,11 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "watch": "concurrently --names 'webpack, stylus' --prefix name 'npm run start' 'npm run styles:watch'",
+    "watch": "concurrently --names 'webpack, sass' --prefix name 'npm run start' 'npm run styles:watch'",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
-    "styles:watch": "stylus -u autoprefixer-stylus -w ./src/css/style.styl -o ./src/css/style.css"
+    "styles": "sass ./src/css/style.scss ./src/css/style.css",
+    "styles:watch": "sass --watch ./src/css/style.scss:./src/css/style.css"
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
